Haciéndole caso a LINT